feat: initial provider with vpc component resource (#1)
* fix: cleanup examples and sdk

* feat: initial provider with vpc component resource

* docs: remove boilerplate readme, todos

* fix: add schema, update makefile

* actions: add initial github actions, .releaserc, repo settings

* chore: apply automatic generated SDK changes

* fix: sdk module path

* fix: instantiate maps, fix provider case statement

Co-authored-by: benjyiw <benjyiw@users.noreply.github.com>

--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,19 +1,17 @@
 {
-    "name": "@pulumi/xyz",
+    "name": "@pulumi/catalystsquad-platform",
     "version": "${VERSION}",
     "scripts": {
         "build": "tsc"
     },
     "dependencies": {
-        "@pulumi/aws": "^4.0.0"
+        "@pulumi/pulumi": "^3.31.0"
     },
     "devDependencies": {
         "typescript": "^3.7.0"
     },
-    "peerDependencies": {
-        "@pulumi/pulumi": "latest"
-    },
     "pulumi": {
-        "resource": true
+        "resource": true,
+        "pluginDownloadURL": "https://github.com/catalystsquad/pulumi-catalystsquad-platform/releases/download/v${VERSION}"
     }
 }
