--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -15,7 +15,10 @@
     "files": [
         "index.ts",
         "provider.ts",
-        "staticPage.ts",
-        "utilities.ts"
+        "types/index.ts",
+        "types/input.ts",
+        "types/output.ts",
+        "utilities.ts",
+        "vpc.ts"
     ]
 }
