--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,7 +2,7 @@
 repository:
   # See https://docs.github.com/en/rest/reference/repos#update-a-repository for all available settings.
   # A short description of the repository that will show up on GitHub
-  description: Pulumi provider for the Catalyst Squad platform.
+  description: Pulumi provider for the Catalyst Squad platform
   # Either `true` to make the repository private, or `false` to make it public.
   private: false
   # Either `true` to enable issues for this repository, `false` to disable them.
