--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+          token: ${{ secrets.AUTOMATION_PAT }}
       - name: Release
         id: release
         uses: cycjimmy/semantic-release-action@v2
