--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
           token: ${{ secrets.AUTOMATION_PAT }}
       - name: Release
         id: release
