--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,7 @@ on:
     paths:
       - "provider/**"
       - "schema.yaml"
+      - "sdk/**"
 jobs:
   semantic-release:
     name: Semantic Release
@@ -33,7 +34,8 @@ jobs:
             @semantic-release/git
             @semantic-release/github
       # create an extra tag for the SDK go module
-      - uses: rickstaa/action-create-tag@v1
+      - if: steps.release.outputs.new_release_published == 'true'
+        uses: rickstaa/action-create-tag@v1
         name: Create SDK tag
         with:
           tag: "sdk/${{ steps.release.outputs.new_release_version }}"
