--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "@pulumi/aws": "^5.3.0",
+        "@pulumi/kubernetes": "^3.19.1",
         "@pulumi/pulumi": "^3.31.0"
     },
     "devDependencies": {
