feat: add velero dependencies resource, improve util functions, gen sdk

--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -23,6 +23,7 @@
         "types/input.ts",
         "types/output.ts",
         "utilities.ts",
+        "veleroDependencies.ts",
         "vpc.ts"
     ]
 }
